--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     </div>
 </div>
 
-<script src="../bower_components/angular/angular.min.js"></script>
-<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="../bower_components/angular-animate/angular-animate.min.js"></script>
-<script src="../bower_components/lodash/dist/lodash.min.js"></script>
-<script src="../bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-<script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
+<script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+<script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/slide-menu.js"></script>
 <script src="js/controllers/bookCtrl.js"></script>
