--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html ng-app="app">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="icon" href="images/titleicon.png" type="image/png">
+
     <link rel="stylesheet" href="css/styles-min.css">
     <link rel="stylesheet" href="css/roboto.css">
     <link rel="stylesheet" href="css/zantroke.css">
