style-min.css to style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="icon" href="images/titleicon.png" type="image/png">
 
-    <link rel="stylesheet" href="css/styles-min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/roboto.css">
     <link rel="stylesheet" href="css/zantroke.css">
     <link rel="stylesheet" href="css/comfortaa.css">
