add link to api

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="footer" ng-hide="$state.is('index')">
         <div class="copyright-container">
             <span class="copyright">All Rights Reserved</span>
-            <a class="about-us" href="">API</a>
+            <a class="about-us" href="http://api.bkcrossing.tk/docs/">API</a>
         </div>
     </div>
 </div>
